# apex

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  vroomarr logs epg wec.txt
.beads/: .gitignore  interactions.jsonl  issues.jsonl
.github/ISSUE_TEMPLATE/: bug_report.yml  enhancement.yml  feature_request.yml  league_request.yml
.github/workflows/: docker-publish.yml  release.yml
apex/: __init__.py
apex/api/: __init__.py  app.py  cache_refresh_status.py  (+2 more)
docs/: _config.yml  index.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
motorsports/: __init__.py  matcher.py  normalize.py  segments.py  service.py  types.py
teamarr/: __init__.py
tests/: README.md  conftest.py  fakes.py  helpers.py  test_art_base_url_migration.py  test_channel_collision_awareness.py  test_channel_source.py  test_channelsdvr_client.py  test_checkpoint_v43.py  test_country_resolver.py  test_custom_leagues.py  test_db_connection.py  test_dispatcharr_auth.py  test_dispatcharr_program_search.py  test_dispatcharr_sync_reliability.py  test_epg_match_offstate_v74.py  test_epg_matcher_integration.py  test_epg_program_index.py  test_espn_league_routing.py  test_event_card_fuzzy_match.py  test_exception_keyword_tvg_id.py  test_feed_separation.py  test_feed_team_variables.py  test_managed_channel_update_columns.py  test_match_cache_short_name_heal.py  test_migration_conventions.py  test_migration_helpers.py  test_milb_dedupe_v73.py  test_motorsports_variables.py  test_multi_sport_hints.py  test_multi_template_fixes.py  test_ncaab_gender_classification.py  test_postgame_next_var.py  test_priority_teams.py  test_racing_provider.py  test_racing_segments.py  test_reconciliation.py  test_refresh_event_status_additive.py  test_resolver_group_validation.py  test_sample_data_coverage.py  (+22 more)
(+743 files in other folders)
