[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vroomarr"
version = "1.0.0"
description = "Match IPTV/EPG stream names to motorsports events with per-session time windows"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "unidecode>=1.3",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["motorsports"]
