[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apex"
version = "0.3.0"
description = "Motorsports EPG generator for Dispatcharr"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.0.0",
    "croniter>=2.0.0",
    "unidecode>=1.3.0",
    "pycountry>=23.12.11",
    "babel>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# B008: Depends() in defaults is standard FastAPI pattern
"apex/api/routes/*.py" = ["B008"]
# E501: Allow long lines in test data (stream names are long)
"tests/test_v1_comparison.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
